--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url= jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url= jdbc:postgresql://db.fgwlagbzqzwkrwuarpah.supabase.co:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=SmartTeam13#17
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
