--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,5 @@ spring.datasource.username=postgres
 spring.datasource.password=SmartTeam13#17
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-
+spring.mvc.format.date="yyyy-MM-dd"
+spring.mvc.hiddenmethod.filter.enable=true
